--- a/Class5/Speeding-up-computations-Python.slides.html
+++ b/Class5/Speeding-up-computations-Python.slides.html
@@ -13212,15 +13212,16 @@ a.anchor-link {
 <div class="prompt input_prompt">In&nbsp;[1]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="kn">from</span> <span class="nn">collections</span> <span class="kn">import</span> <span class="n">Counter</span>
-<span class="kn">import</span> <span class="nn">dask.dataframe</span> <span class="k">as</span> <span class="nn">dd</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="kn">from</span> <span class="nn">collections</span> <span class="k">import</span> <span class="n">Counter</span>
 <span class="kn">import</span> <span class="nn">inspect</span>
-<span class="kn">from</span> <span class="nn">joblib</span> <span class="kn">import</span> <span class="n">Parallel</span><span class="p">,</span> <span class="n">delayed</span>
-<span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
 <span class="kn">import</span> <span class="nn">os</span>
-<span class="kn">import</span> <span class="nn">pandas</span> <span class="k">as</span> <span class="nn">pd</span>
 <span class="kn">import</span> <span class="nn">requests</span>
-<span class="kn">from</span> <span class="nn">sklearn.ensemble</span> <span class="kn">import</span> <span class="n">RandomForestClassifier</span>
+
+<span class="kn">import</span> <span class="nn">dask.dataframe</span> <span class="k">as</span> <span class="nn">dd</span>
+<span class="kn">from</span> <span class="nn">joblib</span> <span class="k">import</span> <span class="n">Parallel</span><span class="p">,</span> <span class="n">delayed</span>
+<span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
+<span class="kn">import</span> <span class="nn">pandas</span> <span class="k">as</span> <span class="nn">pd</span>
+<span class="kn">from</span> <span class="nn">sklearn.ensemble</span> <span class="k">import</span> <span class="n">RandomForestClassifier</span>
 </pre></div>
 
     </div>
@@ -13282,8 +13283,8 @@ a.anchor-link {
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>CPU times: user 17.9 s, sys: 3.87 s, total: 21.8 s
-Wall time: 1min 41s
+<pre>CPU times: user 15.5 s, sys: 4.76 s, total: 20.2 s
+Wall time: 1min 27s
 </pre>
 </div>
 </div>
@@ -13362,8 +13363,8 @@ Wall time: 1min 41s
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>CPU times: user 536 ms, sys: 17.8 ms, total: 554 ms
-Wall time: 544 ms
+<pre>CPU times: user 496 ms, sys: 25.4 ms, total: 521 ms
+Wall time: 517 ms
 </pre>
 </div>
 </div>
@@ -13376,21 +13377,21 @@ Wall time: 544 ms
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>AA     525220
-YV     133976
-UA     531245
-AS     147569
-FL     218162
-US     404263
-MQ     473140
-F9      79255
-HA      74109
+<pre>MQ     473140
 DL     726879
 WN    1140535
-VX      54742
+AA     525220
 EV     740855
+FL     218162
+US     404263
+UA     531245
+VX      54742
+YV     133976
 B6     229056
 OO     617756
+AS     147569
+HA      74109
+F9      79255
 Name: UniqueCarrier, dtype: int64</pre>
 </div>
 
@@ -13460,8 +13461,8 @@ Name: UniqueCarrier, dtype: int64</pre>
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>CPU times: user 26.8 s, sys: 5.34 s, total: 32.1 s
-Wall time: 1min 46s
+<pre>CPU times: user 25.2 s, sys: 6.22 s, total: 31.4 s
+Wall time: 1min 32s
 </pre>
 </div>
 </div>
@@ -13522,7 +13523,7 @@ Wall time: 1min 46s
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>986 ms ± 23 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)
+<pre>1.52 s ± 23 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)
 </pre>
 </div>
 </div>
@@ -13556,8 +13557,8 @@ Wall time: 1min 46s
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>CPU times: user 92.4 ms, sys: 18 ms, total: 110 ms
-Wall time: 1.03 s
+<pre>CPU times: user 106 ms, sys: 27.9 ms, total: 134 ms
+Wall time: 1.49 s
 </pre>
 </div>
 </div>
@@ -13681,8 +13682,8 @@ Wall time: 1.03 s
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>CPU times: user 47 s, sys: 123 ms, total: 47.1 s
-Wall time: 47.1 s
+<pre>CPU times: user 47.9 s, sys: 232 ms, total: 48.1 s
+Wall time: 48.2 s
 </pre>
 </div>
 </div>
@@ -13714,8 +13715,8 @@ Wall time: 47.1 s
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>CPU times: user 1.2 s, sys: 255 ms, total: 1.45 s
-Wall time: 1.45 s
+<pre>CPU times: user 1.15 s, sys: 209 ms, total: 1.36 s
+Wall time: 1.36 s
 </pre>
 </div>
 </div>
@@ -13747,7 +13748,7 @@ Wall time: 1.45 s
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>97.1 ms ± 1.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)
+<pre>72.3 ms ± 3.2 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)
 </pre>
 </div>
 </div>
@@ -13779,7 +13780,7 @@ Wall time: 1.45 s
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>4.23 s ± 26.9 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)
+<pre>3.88 s ± 30 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)
 </pre>
 </div>
 </div>
@@ -13851,8 +13852,8 @@ Wall time: 1.45 s
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>CPU times: user 2.04 s, sys: 125 ms, total: 2.17 s
-Wall time: 1.77 s
+<pre>CPU times: user 1.86 s, sys: 78.2 ms, total: 1.94 s
+Wall time: 1.6 s
 </pre>
 </div>
 </div>
@@ -13929,8 +13930,8 @@ Name: DepDelay, dtype: int64</pre>
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>CPU times: user 754 ms, sys: 61.1 ms, total: 815 ms
-Wall time: 212 ms
+<pre>CPU times: user 692 ms, sys: 38.5 ms, total: 731 ms
+Wall time: 185 ms
 </pre>
 </div>
 </div>
@@ -14071,8 +14072,8 @@ Name: DepDelay, dtype: int64</pre>
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>CPU times: user 2min 14s, sys: 387 ms, total: 2min 15s
-Wall time: 2min 15s
+<pre>CPU times: user 2min 6s, sys: 335 ms, total: 2min 7s
+Wall time: 2min 7s
 </pre>
 </div>
 </div>
@@ -14212,8 +14213,8 @@ False
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>CPU times: user 52.6 ms, sys: 12.8 ms, total: 65.3 ms
-Wall time: 25.4 ms
+<pre>CPU times: user 42.3 ms, sys: 8.35 ms, total: 50.6 ms
+Wall time: 20.3 ms
 </pre>
 </div>
 </div>
@@ -14364,8 +14365,8 @@ Wall time: 25.4 ms
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>CPU times: user 381 ms, sys: 56.9 ms, total: 438 ms
-Wall time: 127 ms
+<pre>CPU times: user 304 ms, sys: 23.5 ms, total: 328 ms
+Wall time: 86 ms
 </pre>
 </div>
 </div>
@@ -14468,8 +14469,8 @@ Wall time: 127 ms
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>CPU times: user 44 s, sys: 15.5 s, total: 59.5 s
-Wall time: 1min 45s
+<pre>CPU times: user 40.3 s, sys: 11.5 s, total: 51.8 s
+Wall time: 1min 33s
 </pre>
 </div>
 </div>
@@ -14573,7 +14574,7 @@ Name: UniqueCarrier, dtype: int64</pre>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Load Fashion-MNIST data set using helper function from Fashion-MNIST repository:</span>
-<span class="kn">from</span> <span class="nn">utils</span> <span class="kn">import</span> <span class="n">mnist_reader</span>
+<span class="kn">from</span> <span class="nn">utils</span> <span class="k">import</span> <span class="n">mnist_reader</span>
 <span class="c1"># Load 10K images for this demo:</span>
 <span class="n">X</span><span class="p">,</span> <span class="n">y</span> <span class="o">=</span> <span class="n">mnist_reader</span><span class="o">.</span><span class="n">load_mnist</span><span class="p">(</span><span class="s1">&#39;data/fashion&#39;</span><span class="p">,</span> <span class="n">kind</span><span class="o">=</span><span class="s1">&#39;t10k&#39;</span><span class="p">)</span>
 </pre></div>
@@ -14611,7 +14612,7 @@ Name: UniqueCarrier, dtype: int64</pre>
 
 <div class="output_subarea output_stream output_stderr output_text">
 <pre>[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.
-[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:   32.8s finished
+[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:   33.0s finished
 </pre>
 </div>
 </div>
@@ -14652,7 +14653,7 @@ Name: UniqueCarrier, dtype: int64</pre>
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;Signature (n_estimators=100, criterion=&#39;gini&#39;, max_depth=None, min_samples_split=2, min_samples_leaf=1, min_weight_fraction_leaf=0.0, max_features=&#39;auto&#39;, max_leaf_nodes=None, min_impurity_decrease=0.0, min_impurity_split=None, bootstrap=True, oob_score=False, n_jobs=None, random_state=None, verbose=0, warm_start=False, class_weight=None, ccp_alpha=0.0, max_samples=None)&gt;</pre>
+<pre>&lt;Signature (n_estimators=&#39;warn&#39;, criterion=&#39;gini&#39;, max_depth=None, min_samples_split=2, min_samples_leaf=1, min_weight_fraction_leaf=0.0, max_features=&#39;auto&#39;, max_leaf_nodes=None, min_impurity_decrease=0.0, min_impurity_split=None, bootstrap=True, oob_score=False, n_jobs=None, random_state=None, verbose=0, warm_start=False, class_weight=None)&gt;</pre>
 </div>
 
 </div>
@@ -14702,10 +14703,10 @@ Name: UniqueCarrier, dtype: int64</pre>
 
 <div class="output_subarea output_stream output_stderr output_text">
 <pre>[Parallel(n_jobs=2)]: Using backend ThreadingBackend with 2 concurrent workers.
-[Parallel(n_jobs=2)]: Done  46 tasks      | elapsed:    1.8s
-[Parallel(n_jobs=2)]: Done 196 tasks      | elapsed:    7.2s
-[Parallel(n_jobs=2)]: Done 446 tasks      | elapsed:   16.3s
-[Parallel(n_jobs=2)]: Done 500 out of 500 | elapsed:   18.1s finished
+[Parallel(n_jobs=2)]: Done  46 tasks      | elapsed:    1.6s
+[Parallel(n_jobs=2)]: Done 196 tasks      | elapsed:    6.4s
+[Parallel(n_jobs=2)]: Done 446 tasks      | elapsed:   15.5s
+[Parallel(n_jobs=2)]: Done 500 out of 500 | elapsed:   17.6s finished
 </pre>
 </div>
 </div>
@@ -14752,9 +14753,9 @@ Name: UniqueCarrier, dtype: int64</pre>
 <div class="output_subarea output_stream output_stderr output_text">
 <pre>[Parallel(n_jobs=4)]: Using backend ThreadingBackend with 4 concurrent workers.
 [Parallel(n_jobs=4)]: Done  42 tasks      | elapsed:    0.9s
-[Parallel(n_jobs=4)]: Done 192 tasks      | elapsed:    3.9s
-[Parallel(n_jobs=4)]: Done 442 tasks      | elapsed:    8.9s
-[Parallel(n_jobs=4)]: Done 500 out of 500 | elapsed:   10.1s finished
+[Parallel(n_jobs=4)]: Done 192 tasks      | elapsed:    3.8s
+[Parallel(n_jobs=4)]: Done 442 tasks      | elapsed:    9.9s
+[Parallel(n_jobs=4)]: Done 500 out of 500 | elapsed:   11.4s finished
 </pre>
 </div>
 </div>
@@ -14845,19 +14846,19 @@ Name: UniqueCarrier, dtype: int64</pre>
 
 <div class="output_subarea output_stream output_stderr output_text">
 <pre>[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.
-[Parallel(n_jobs=1)]: Done  50 out of  50 | elapsed:    3.4s finished
+[Parallel(n_jobs=1)]: Done  50 out of  50 | elapsed:    3.6s finished
 [Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.
-[Parallel(n_jobs=1)]: Done 100 out of 100 | elapsed:    6.7s finished
+[Parallel(n_jobs=1)]: Done 100 out of 100 | elapsed:    7.0s finished
 [Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.
-[Parallel(n_jobs=1)]: Done 250 out of 250 | elapsed:   15.7s finished
+[Parallel(n_jobs=1)]: Done 250 out of 250 | elapsed:   16.7s finished
 [Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.
-[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:   30.7s finished
+[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:   31.9s finished
 [Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.
-[Parallel(n_jobs=1)]: Done 1000 out of 1000 | elapsed:  1.1min finished
+[Parallel(n_jobs=1)]: Done 1000 out of 1000 | elapsed:  1.0min finished
 [Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.
-[Parallel(n_jobs=1)]: Done 1500 out of 1500 | elapsed:  1.6min finished
+[Parallel(n_jobs=1)]: Done 1500 out of 1500 | elapsed:  1.5min finished
 [Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.
-[Parallel(n_jobs=1)]: Done 2500 out of 2500 | elapsed:  2.9min finished
+[Parallel(n_jobs=1)]: Done 2500 out of 2500 | elapsed:  2.5min finished
 </pre>
 </div>
 </div>
@@ -14901,17 +14902,17 @@ Name: UniqueCarrier, dtype: int64</pre>
 [Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.
 [Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.
 [Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.
-[Parallel(n_jobs=1)]: Done  50 out of  50 | elapsed:    5.2s finished
+[Parallel(n_jobs=1)]: Done  50 out of  50 | elapsed:    4.7s finished
 [Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.
-[Parallel(n_jobs=1)]: Done 100 out of 100 | elapsed:   10.1s finished
+[Parallel(n_jobs=1)]: Done 100 out of 100 | elapsed:    8.7s finished
 [Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.
-[Parallel(n_jobs=1)]: Done 250 out of 250 | elapsed:   24.3s finished
+[Parallel(n_jobs=1)]: Done 250 out of 250 | elapsed:   22.1s finished
 [Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.
-[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:   47.4s finished
-[Parallel(n_jobs=1)]: Done 1000 out of 1000 | elapsed:  1.5min finished
+[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:   45.5s finished
+[Parallel(n_jobs=1)]: Done 1000 out of 1000 | elapsed:  1.4min finished
 [Parallel(n_jobs=1)]: Done 1500 out of 1500 | elapsed:  2.0min finished
-[Parallel(n_jobs=1)]: Done 2500 out of 2500 | elapsed:  3.1min finished
-[Parallel(n_jobs=4)]: Done   7 out of   7 | elapsed:  3.8min finished
+[Parallel(n_jobs=1)]: Done 2500 out of 2500 | elapsed:  2.9min finished
+[Parallel(n_jobs=4)]: Done   7 out of   7 | elapsed:  3.5min finished
 </pre>
 </div>
 </div>
